deployment/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: starlight
  labels:
    name: starlight
    environment: production
